// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  id="modal-background"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "rgba(0,0,0,0.4)",
      "display": "flex",
      "height": "100%",
      "justifyContent": "center",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "top": "0",
      "width": "100%",
      "zIndex": "10001",
    }
  }
>
  <div
    id="modal"
    style={
      Object {
        "backgroundColor": "#fefefe",
        "border": "1px solid #888",
        "borderRadius": 4,
        "boxShadow": "0 2px 10px 1px rgba(0,0,0, .1)",
        "maxHeight": "80vh",
        "maxWidth": "1000px",
        "overflow": "hidden",
        "padding": "30px 20px 20px 20px",
        "width": "80vw",
      }
    }
  >
    <header
      className="LayerInfoPage-header-0-1-1"
    >
      <h1>
        Test name
      </h1>
      <button
        aria-label="Close"
        className="LayerInfoPage-closeButton-0-1-3"
        onClick={[Function]}
      >
        <svg
          className="wri_api__c-icon wri_api__-small"
          style={Object {}}
        >
          <use
            xlinkHref="#icon-cross"
          />
        </svg>
      </button>
    </header>
    <p
      dangerouslySetInnerHTML={
        Object {
          "__html": "Test description",
        }
      }
    />
    <button
      className="LayerInfoPage-button-0-1-2"
      onClick={[Function]}
    >
      Close
    </button>
  </div>
</div>
`;

exports[`renders correctly without a description too 1`] = `
<div
  id="modal-background"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "rgba(0,0,0,0.4)",
      "display": "flex",
      "height": "100%",
      "justifyContent": "center",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "top": "0",
      "width": "100%",
      "zIndex": "10001",
    }
  }
>
  <div
    id="modal"
    style={
      Object {
        "backgroundColor": "#fefefe",
        "border": "1px solid #888",
        "borderRadius": 4,
        "boxShadow": "0 2px 10px 1px rgba(0,0,0, .1)",
        "maxHeight": "80vh",
        "maxWidth": "1000px",
        "overflow": "hidden",
        "padding": "30px 20px 20px 20px",
        "width": "80vw",
      }
    }
  >
    <header
      className="LayerInfoPage-header-0-1-1"
    >
      <h1>
        Test name
      </h1>
      <button
        aria-label="Close"
        className="LayerInfoPage-closeButton-0-1-3"
        onClick={[Function]}
      >
        <svg
          className="wri_api__c-icon wri_api__-small"
          style={Object {}}
        >
          <use
            xlinkHref="#icon-cross"
          />
        </svg>
      </button>
    </header>
    <p
      dangerouslySetInnerHTML={
        Object {
          "__html": "A long description of this dataset is not yet available.",
        }
      }
    />
    <button
      className="LayerInfoPage-button-0-1-2"
      onClick={[Function]}
    >
      Close
    </button>
  </div>
</div>
`;
